--- a/mla13.sty
+++ b/mla13.sty
@@ -7,7 +7,7 @@
 \usepackage{csquotes}
 \usepackage{setspace}
 \setlength{\parindent}{0.5in}
-\usepackage[style=mla,mladraft=true,annotation=true]{biblatex}
+\usepackage[style=mla,backend=biber]{biblatex} %mladraft=true,annotation=true,
 \usepackage{color}
 \newcommand{\sources}[1]{
   \def\@sources{#1}
